--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ownername">ownerName</string>
+    <string name="classname">ClassName</string>
+    <string name="numberofusersinclassroom">NumberOfUsersInClassRoom</string>
 </resources>
