Splash screen and Classroom RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="fullname">FullName</string>
     <string name="email">Email</string>
     <string name="last_login_date">Last Login Date</string>
+    <string name="your_classrooms">Your classrooms:</string>
+    <string name="welcome_to_progresee">Welcome to ProgreSee</string>
 
 </resources>
