TaskDetails layout and recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,10 +18,16 @@
     <string name="google_login">Google Login</string>
     <string name="progresee_icon">ProgreSee Icon</string>
     <string name="task_title">Task Title</string>
-    <string name="due_by">Due by</string>
+    <string name="due_by">Due by: %1$s</string>
     <string name="user_profile">User profile</string>
     <string name="create_a_classroom_title">Create A Classroom</string>
     <string name="classroom_description">Classroom Description</string>
     <string name="classroom_name">Classroom Name</string>
+    <string name="progresee">ProgreSee</string>
+    <string name="number_of_tasks">Open tasks: %1$d </string>
+    <string name="task_desc_long_255">ZrrcYvrGgxakww8qHeDWdN3YC1OOEQimJd7zlObnCDkdwtpU3XjniOqGGU4fT91quvOtbzjIH9r7SuMbB0NgdKZ6FBHEzLGBp7X52gefZ7TS973leFJbUsmVXnGVZ8nYExsu27iQdnxLjsN2wDBhmIGrmfHP8T4jyweZ8wvI0V0EAcYnrRPmiFBltWcdMSZ9osdRCDGM0Ew8xX4PT5TmFW5Fvm0GfnOigcYL0mK2mjmqWflp0CNQHK9hJgeM7Bs</string>
+    <string name="description">Description:</string>
+    <string name="attached_image">Attached Image:</string>
+    <string name="task_image">Task image</string>
 
 </resources>
