--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="task_title">Task Title</string>
     <string name="due_by">Due by: %1$s</string>
     <string name="user_profile">User profile</string>
-    <string name="create_a_classroom_title">Create A Classroom</string>
+    <string name="create_classroom_title">Create Classroom</string>
     <string name="classroom_description">Classroom Description</string>
     <string name="classroom_name">Classroom Name</string>
     <string name="progresee">ProgreSee</string>
@@ -30,5 +30,10 @@
     <string name="description">Description:</string>
     <string name="attached_image">Attached Image:</string>
     <string name="task_image">Task image</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="generated_classroom_invite_link">Generated classroom invite link:</string>
+    <string name="save">Save</string>
+    <string name="name_too_long">Classroom name can not be longer than 60 characters</string>
 
 </resources>
