--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="info">Info</string>
     <string name="edit_classroom">Edit classroom</string>
     <string name="delete_are_you_sure">Are you sure you want to delete this classroom? Deleting the classroom will also delete all the tasks within it.</string>
+    <string name="enter_user_email">Please enter the user\'s email</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="exit">Exit</string>
