--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="progresee">ProgreSee</string>
     <string name="number_of_tasks">Open tasks: %1$d </string>
     <string name="last_login_date">Last seen: %1$s</string>
-    <string name="number_of_exercises">Finished exercises: %1$d/%2$d </string>
+    <string name="number_of_exercises">Number of exercises: %1$d </string>
     <string name="task_desc_long_255">ZrrcYvrGgxakww8qHeDWdN3YC1OOEQimJd7zlObnCDkdwtpU3XjniOqGGU4fT91quvOtbzjIH9r7SuMbB0NgdKZ6FBHEzLGBp7X52gefZ7TS973leFJbUsmVXnGVZ8nYExsu27iQdnxLjsN2wDBhmIGrmfHP8T4jyweZ8wvI0V0EAcYnrRPmiFBltWcdMSZ9osdRCDGM0Ew8xX4PT5TmFW5Fvm0GfnOigcYL0mK2mjmqWflp0CNQHK9hJgeM7Bs</string>
     <string name="description">Description:</string>
     <string name="attached_image">Attached Image:</string>
@@ -39,8 +39,10 @@
     <string name="description_too_long">Description can not be longer than 100 characters</string>
     <string name="info">Info</string>
     <string name="edit_classroom">Edit classroom</string>
-    <string name="delete_are_you_sure">Are you sure you want to delete this classroom? Deleting the classroom will also delete all the tasks within it.</string>
+    <string name="delete_are_you_sure_classroom">Are you sure you want to delete this classroom? Deleting the classroom will also delete all the tasks within it.</string>
+    <string name="delete_are_you_sure_task">Are you sure you want to delete this Task? Deleting the task will also delete all the exercises within it.</string>
     <string name="enter_user_email">Please enter the user\'s email</string>
+    <string name="enter_exercise_description">Please enter exercise description</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="exit">Exit</string>
@@ -61,7 +63,7 @@
     <string name="transfer_ownership">Transfer ownership</string>
     <string name="remove_user">Remove user</string>
     <string name="dots">⋮</string>
-    <string name="links">Links</string>
+    <string name="links">Resource Link: </string>
     <string name="create_task">Create Task</string>
     <string name="links_header">Links:</string>
     <string name="resource_link">Resource link</string>
@@ -70,7 +72,11 @@
     <string name="see_progress">See Progress</string>
     <string name="add_exercise">Add exercise</string>
     <string name="end_date">End date</string>
-    <string name="date">Current end date: 00/00/0000</string>
+    <string name="current_end_date_string">Current end date: </string>
+    <string name="current_date">%1$d/%2$d/%3$d</string>
+    <string name="date_mock">00/00/0000</string>
     <string name="task_status_image">Task Status Image</string>
+    <string name="please_pick_date">Please pick an End Date</string>
+    <string name="edit_task">Edit Task</string>
 
 </resources>
