--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="delete_exercise">Delete Exercise</string>
     <string name="seanhed22_gmail_com">seanhed22@gmail.com</string>
     <string name="see_progresee">See ProgreSee</string>
+    <string name="completed_list_title">Users Completed List</string>
 
 
 </resources>
