--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="seanhed22_gmail_com">seanhed22@gmail.com</string>
     <string name="see_progresee">See ProgreSee</string>
     <string name="completed_list_title">Users Completed List</string>
+    <string name="save_changes">Save Changes</string>
 
 
 </resources>
